--- a/templates/email_attendance.html
+++ b/templates/email_attendance.html
@@ -96,7 +96,7 @@
               <p>
                 We’ve reserved
                 {% if seats == 1 %}
-                    <strong style="color:#f1c27d;">your seat</strong>
+                    <strong style="color:#f1c27d;">a seat</strong> in your honor.
                 {% else %}
                     <strong style="color:#f1c27d;">{{ seats }} seats</strong> for you and your party.
                 {% endif %}
